# custom-components-template

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: AUTHORS.md  README.md  pyproject.toml  tox.ini
{{cookiecutter.project_slug}}/tests/: test_components.py  test_minimal.py
