[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "0.0.0"
description = "{{ cookiecutter.project_short_description }}"
authors = [
    "{{ cookiecutter.full_name }} <{{ cookiecutter.email }}>"
]
license = "{{ cookiecutter.license }}"
readme = "README.md"

[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_version }}"
cbdf-api = "{{cookiecutter.cbdf_api_version}}"

[build-system]
requires = [
    "poetry-core>=1.0.8",
    "poetry-dynamic-versioning>=0.17.1",
]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
